--- a/Lab08/Laboratorio 8_Face Recognition.ipynb
+++ b/Lab08/Laboratorio 8_Face Recognition.ipynb
@@ -96,11 +96,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Solución Aquí"
+    "# Solución Aquí\n",
+    "\n",
+    "r = {2: (57.456, 1.291)}"
    ]
   },
   {
