--- a/Lab08/Laboratorio 8_Face Recognition.ipynb
+++ b/Lab08/Laboratorio 8_Face Recognition.ipynb
@@ -6281,7 +6281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12271,7 +12271,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def image_path_to_vector(photo_path: str):\n",
+    "    try:\n",
+    "        image = face_recognition.load_image_file(photo_path)\n",
+    "        embeddings = face_recognition.face_encodings(image)\n",
+    "        if len(embeddings) > 0:\n",
+    "            return embeddings[0].tolist()\n",
+    "        else:\n",
+    "            return None\n",
+    "    except FileNotFoundError as e:\n",
+    "        print(f\"File {photo_path} was not found\")\n",
+    "        return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -18088,18 +18107,6 @@
     }
    ],
    "source": [
-    "def image_path_to_vector(photo_path: str):\n",
-    "    try:\n",
-    "        image = face_recognition.load_image_file(photo_path)\n",
-    "        embeddings = face_recognition.face_encodings(image)\n",
-    "        if len(embeddings) > 0:\n",
-    "            return embeddings[0].tolist()\n",
-    "        else:\n",
-    "            return None\n",
-    "    except FileNotFoundError as e:\n",
-    "        print(f\"File {photo_path} was not found\")\n",
-    "        return None\n",
-    "\n",
     "connection = psycopg2.connect(\n",
     "    dbname=\"lab8\", user=\"postgres\", password=\"postgres\", host=\"localhost\", port=\"5432\"\n",
     ")\n",
@@ -18144,7 +18151,7 @@
     "     SELECT id, name, embedding <=> '[0.12, 0.34, ..., 0.99]' AS distance\n",
     "     FROM face_embeddings\n",
     "     ORDER BY embedding <=> '[0.12, 0.34, ..., 0.99]'\n",
-    "     LIMIT 5;\n",
+    "     LIMIT 3;\n",
     "    ```\n",
     "\n",
     "Esta implementación es especialmente útil cuando necesitamos integrar la búsqueda de similitud en una aplicación que ya utiliza PostgreSQL como base de datos principal."
@@ -18152,20 +18159,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Limit  (cost=1277.00..1277.00 rows=3 width=26) (actual time=13.369..13.372 rows=3 loops=1) \n",
-      "  ->  Sort  (cost=1277.00..1309.94 rows=13176 width=26) (actual time=13.366..13.368 rows=3 loops=1) \n",
+      "Limit  (cost=1277.00..1277.00 rows=3 width=26) (actual time=12.521..12.524 rows=3 loops=1) \n",
+      "  ->  Sort  (cost=1277.00..1309.94 rows=13176 width=26) (actual time=12.518..12.519 rows=3 loops=1) \n",
       "        Sort Key: ((embedding <-> '[-0.096009105,0.14546216,0.09231854,-0.021417255,-0.087487586,0.037923984,-0.10061454,-0.087601386,0.17923418,-0.17057385,0.25807112,0.020655053,-0.23812176,0.06254391,-0.08672675,0.14618573,-0.1978739,-0.07211497,-0.114612885,-0.10073572,-0.06398544,0.08870138,-0.019076005,-0.011102783,-0.12899613,-0.30976507,-0.05976227,-0.07063986,0.14123999,-0.13167693,0.0035514496,0.05257624,-0.11050359,0.024500161,0.017681098,0.07187895,-0.03211974,-0.08280301,0.26875046,0.03801647,-0.10693673,0.021881083,-0.009514753,0.3166273,0.18489549,-0.01618939,0.06391599,-0.092295356,0.1434938,-0.345447,0.018926542,0.12145162,0.11749607,0.07301212,0.08057866,-0.20891392,0.008694364,0.12729272,-0.11612955,0.16060314,0.13260952,-0.09686002,-0.066431575,-0.0053451974,0.16820274,0.06613807,-0.1305018,-0.11294001,0.18482083,-0.15260498,-0.024382053,0.080612704,-0.062479,-0.21950458,-0.24335684,0.08495066,0.40216145,0.27341294,-0.20135455,-0.021040697,0.019239593,-0.009952027,0.099345565,0.078277975,-0.13033848,-0.11872331,-0.09615413,0.07274352,0.2492885,0.04036446,-0.03909659,0.21353163,0.033020243,0.0422834,-0.022031981,0.041781854,-0.115702525,-0.06570761,-0.123123795,0.026513148,0.089916974,-0.05154021,-0.010905863,0.14966178,-0.14465094,0.243435,-0.08225508,-0.064283326,0.030071313,0.021590313,-0.09096565,0.070694655,0.26052472,-0.18929479,0.1802252,0.21736754,0.0597471,0.1489942,0.12786736,0.05061259,0.031806633,0.012614084,-0.18956049,-0.18008971,-0.030464914,-0.11106883,0.035132706,-0.0080510145]'::vector)) \n",
       "        Sort Method: top-N heapsort  Memory: 25kB \n",
-      "        ->  Seq Scan on embeddings_with_vector  (cost=0.00..1106.70 rows=13176 width=26) (actual time=0.018..11.739 rows=13176 loops=1) \n",
-      "Planning Time: 2.505 ms \n",
-      "Execution Time: 13.867 ms \n",
+      "        ->  Seq Scan on embeddings_with_vector  (cost=0.00..1106.70 rows=13176 width=26) (actual time=0.021..10.984 rows=13176 loops=1) \n",
+      "Planning Time: 3.028 ms \n",
+      "Execution Time: 13.264 ms \n",
       "\n",
       "74 Adam_Sandler 0.0 \n",
       "72 Adam_Sandler 0.4605479453141553 \n",
@@ -18223,6 +18230,18 @@
     "   - Recomendaciones de uso según el escenario\n",
     "\n",
     "Incluya gráficos que sustenten sus hallazgos."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Rendimiento\n",
+    "Las pruebas se hicieron con el dataset completo con un total de 13176 registros y un valor de k = 3.\n",
+    "\n",
+    "Tiempo 3NN Lineal: 40.461 ms\n",
+    "Tiempo 3NN GiST: 2.911 ms\n",
+    "Tiempo 3NN IVFFlat: 13.264 ms\n"
    ]
   }
  ],
