--- a/Lab08/Laboratorio 8_Face Recognition.ipynb
+++ b/Lab08/Laboratorio 8_Face Recognition.ipynb
@@ -18243,7 +18243,13 @@
     "\n",
     "Tiempo 3NN GiST: 2.911 ms\n",
     "\n",
-    "Tiempo 3NN IVFFlat: 13.264 ms\n"
+    "Tiempo 3NN IVFFlat: 13.264 ms\n",
+    "\n",
+    "## Efectividad\n",
+    "\n",
+    "Las búsqueda lineal y con GiSt al ser exactos obtienen el mismo resultado, sin embargo no están diseñadas para manejar eficientemente vectores de alta dimensión.\n",
+    "\n",
+    "En cambio IVFFlat al ser un método aproximado se puede optimizar la relación entre precisión y rendimiento, lo cuál puede ser benficiosos en ciertos escenarios."
    ]
   }
  ],
