--- a/Lab15/tutorial.ipynb
+++ b/Lab15/tutorial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "a5e16ecf",
    "metadata": {
     "vscode": {
@@ -59,185 +59,8 @@
       "Collecting package metadata (repodata.json): done\n",
       "Solving environment: done\n",
       "\n",
-      "## Package Plan ##\n",
+      "# All requested packages already installed.\n",
       "\n",
-      "  environment location: c:\\Users\\Jvnc\\Documents\\BD2\\BD2-Labs\\Lab15\\.conda\n",
-      "\n",
-      "  added / updated specs:\n",
-      "    - m2-make\n",
-      "\n",
-      "\n",
-      "The following packages will be downloaded:\n",
-      "\n",
-      "    package                    |            build\n",
-      "    ---------------------------|-----------------\n",
-      "    m2-bash-4.3.042            |                5         3.5 MB  msys2\n",
-      "    m2-gcc-libs-5.3.0          |                4        1021 KB  msys2\n",
-      "    m2-libiconv-1.14           |                3         716 KB  msys2\n",
-      "    m2-libintl-0.19.7          |                4          22 KB  msys2\n",
-      "    m2-make-4.1                |                5         454 KB  msys2\n",
-      "    m2-msys2-runtime-2.5.0.17080.65c939c|                3         3.0 MB  msys2\n",
-      "    msys2-conda-epoch-20160418 |                1           2 KB  msys2\n",
-      "    ------------------------------------------------------------\n",
-      "                                           Total:         8.7 MB\n",
-      "\n",
-      "The following NEW packages will be INSTALLED:\n",
-      "\n",
-      "  m2-bash            msys2/win-64::m2-bash-4.3.042-5 \n",
-      "  m2-gcc-libs        msys2/win-64::m2-gcc-libs-5.3.0-4 \n",
-      "  m2-libiconv        msys2/win-64::m2-libiconv-1.14-3 \n",
-      "  m2-libintl         msys2/win-64::m2-libintl-0.19.7-4 \n",
-      "  m2-make            msys2/win-64::m2-make-4.1-5 \n",
-      "  m2-msys2-runtime   msys2/win-64::m2-msys2-runtime-2.5.0.17080.65c939c-3 \n",
-      "  msys2-conda-epoch  msys2/win-64::msys2-conda-epoch-20160418-1 \n",
-      "\n",
-      "\n",
-      "\n",
-      "Downloading and Extracting Packages: ...working...\n",
-      "m2-bash-4.3.042      | 3.5 MB    |            |   0% \n",
-      "\n",
-      "m2-msys2-runtime-2.5 | 3.0 MB    |            |   0% \u001b[A\n",
-      "\n",
-      "\n",
-      "m2-gcc-libs-5.3.0    | 1021 KB   |            |   0% \u001b[A\u001b[A\n",
-      "\n",
-      "\n",
-      "\n",
-      "m2-libiconv-1.14     | 716 KB    |            |   0% \u001b[A\u001b[A\u001b[A\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "m2-make-4.1          | 454 KB    |            |   0% \u001b[A\u001b[A\u001b[A\u001b[A\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "m2-libintl-0.19.7    | 22 KB     |            |   0% \u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "msys2-conda-epoch-20 | 2 KB      |            |   0% \u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "m2-make-4.1          | 454 KB    | ########## | 100% \u001b[A\u001b[A\u001b[A\u001b[A\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "m2-make-4.1          | 454 KB    | ########## | 100% \u001b[A\u001b[A\u001b[A\u001b[A\n",
-      "\n",
-      "\n",
-      "\n",
-      "m2-libiconv-1.14     | 716 KB    | ########## | 100% \u001b[A\u001b[A\u001b[A\n",
-      "\n",
-      "\n",
-      "\n",
-      "m2-libiconv-1.14     | 716 KB    | ########## | 100% \u001b[A\u001b[A\u001b[A\n",
-      "\n",
-      "\n",
-      "m2-gcc-libs-5.3.0    | 1021 KB   | ########## | 100% \u001b[A\u001b[A\n",
-      "\n",
-      "\n",
-      "m2-gcc-libs-5.3.0    | 1021 KB   | ########## | 100% \u001b[A\u001b[A\n",
-      "\n",
-      "\n",
-      "\n",
-      "m2-libiconv-1.14     | 716 KB    | ########## | 100% \u001b[A\u001b[A\u001b[A\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "m2-make-4.1          | 454 KB    | ########## | 100% \u001b[A\u001b[A\u001b[A\u001b[A\n",
-      "\n",
-      "\n",
-      "m2-gcc-libs-5.3.0    | 1021 KB   | ########## | 100% \u001b[A\u001b[A\n",
-      "\n",
-      "m2-msys2-runtime-2.5 | 3.0 MB    | ########## | 100% \u001b[A\n",
-      "\n",
-      "m2-msys2-runtime-2.5 | 3.0 MB    | ########## | 100% \u001b[A\n",
-      "m2-bash-4.3.042      | 3.5 MB    | ########## | 100% \n",
-      "m2-bash-4.3.042      | 3.5 MB    | ########## | 100% \n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "m2-libintl-0.19.7    | 22 KB     | ########## | 100% \u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "m2-libintl-0.19.7    | 22 KB     | ########## | 100% \u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "m2-libintl-0.19.7    | 22 KB     | ########## | 100% \u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "msys2-conda-epoch-20 | 2 KB      | ########## | 100% \u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "msys2-conda-epoch-20 | 2 KB      | ########## | 100% \u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "msys2-conda-epoch-20 | 2 KB      | ########## | 100% \u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
-      "\n",
-      "m2-msys2-runtime-2.5 | 3.0 MB    | ########## | 100% \u001b[A\n",
-      "m2-bash-4.3.042      | 3.5 MB    | ########## | 100% \n",
-      "                                                     \n",
-      "\n",
-      "\n",
-      "                                                     \u001b[A\n",
-      "\n",
-      "\n",
-      "                                                     \u001b[A\u001b[A\n",
-      "\n",
-      "\n",
-      "\n",
-      "                                                     \u001b[A\u001b[A\u001b[A\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "                                                     \u001b[A\u001b[A\u001b[A\u001b[A\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "                                                     \u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "                                                     \u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A done\n",
-      "Preparing transaction: done\n",
-      "Verifying transaction: done\n",
-      "Executing transaction: done\n",
       "\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
@@ -270,154 +93,8 @@
       "Collecting package metadata (repodata.json): done\n",
       "Solving environment: done\n",
       "\n",
-      "## Package Plan ##\n",
+      "# All requested packages already installed.\n",
       "\n",
-      "  environment location: c:\\Users\\Jvnc\\Documents\\BD2\\BD2-Labs\\Lab15\\.conda\n",
-      "\n",
-      "  added / updated specs:\n",
-      "    - pkg-config\n",
-      "\n",
-      "\n",
-      "The following packages will be downloaded:\n",
-      "\n",
-      "    package                    |            build\n",
-      "    ---------------------------|-----------------\n",
-      "    gettext-0.21.1             |       h5728263_0         5.3 MB  conda-forge\n",
-      "    libglib-2.68.4             |       h3be07f2_1         3.3 MB  conda-forge\n",
-      "    libiconv-1.17              |       h8ffe710_0         698 KB  conda-forge\n",
-      "    pcre-8.45                  |       h0e60522_0         518 KB  conda-forge\n",
-      "    pkg-config-0.29.2          |    h2bf4dc2_1008          33 KB  conda-forge\n",
-      "    ------------------------------------------------------------\n",
-      "                                           Total:         9.9 MB\n",
-      "\n",
-      "The following NEW packages will be INSTALLED:\n",
-      "\n",
-      "  gettext            conda-forge/win-64::gettext-0.21.1-h5728263_0 \n",
-      "  libglib            conda-forge/win-64::libglib-2.68.4-h3be07f2_1 \n",
-      "  libiconv           conda-forge/win-64::libiconv-1.17-h8ffe710_0 \n",
-      "  pcre               conda-forge/win-64::pcre-8.45-h0e60522_0 \n",
-      "  pkg-config         conda-forge/win-64::pkg-config-0.29.2-h2bf4dc2_1008 \n",
-      "\n",
-      "\n",
-      "\n",
-      "Downloading and Extracting Packages: ...working...\n",
-      "gettext-0.21.1       | 5.3 MB    |            |   0% \n",
-      "\n",
-      "libglib-2.68.4       | 3.3 MB    |            |   0% \u001b[A\n",
-      "\n",
-      "\n",
-      "libiconv-1.17        | 698 KB    |            |   0% \u001b[A\u001b[A\n",
-      "\n",
-      "\n",
-      "\n",
-      "pcre-8.45            | 518 KB    |            |   0% \u001b[A\u001b[A\u001b[A\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "pkg-config-0.29.2    | 33 KB     |            |   0% \u001b[A\u001b[A\u001b[A\u001b[A\n",
-      "gettext-0.21.1       | 5.3 MB    |            |   0% \n",
-      "\n",
-      "\n",
-      "\n",
-      "pcre-8.45            | 518 KB    | 3          |   3% \u001b[A\u001b[A\u001b[A\n",
-      "\n",
-      "\n",
-      "libiconv-1.17        | 698 KB    | 2          |   2% \u001b[A\u001b[A\n",
-      "\n",
-      "libglib-2.68.4       | 3.3 MB    |            |   0% \u001b[A\n",
-      "\n",
-      "\n",
-      "\n",
-      "pcre-8.45            | 518 KB    | ###3       |  34% \u001b[A\u001b[A\u001b[A\n",
-      "gettext-0.21.1       | 5.3 MB    | 2          |   2% \n",
-      "\n",
-      "\n",
-      "\n",
-      "pcre-8.45            | 518 KB    | #######7   |  77% \u001b[A\u001b[A\u001b[A\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "pkg-config-0.29.2    | 33 KB     | ####8      |  48% \u001b[A\u001b[A\u001b[A\u001b[A\n",
-      "\n",
-      "\n",
-      "libiconv-1.17        | 698 KB    | #8         |  18% \u001b[A\u001b[A\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "pkg-config-0.29.2    | 33 KB     | ########## | 100% \u001b[A\u001b[A\u001b[A\u001b[A\n",
-      "gettext-0.21.1       | 5.3 MB    | 7          |   8% \n",
-      "\n",
-      "libglib-2.68.4       | 3.3 MB    | 3          |   4% \u001b[A\n",
-      "\n",
-      "\n",
-      "\n",
-      "pcre-8.45            | 518 KB    | ########## | 100% \u001b[A\u001b[A\u001b[A\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "pkg-config-0.29.2    | 33 KB     | ########## | 100% \u001b[A\u001b[A\u001b[A\u001b[A\n",
-      "\n",
-      "\n",
-      "libiconv-1.17        | 698 KB    | ######1    |  62% \u001b[A\u001b[A\n",
-      "gettext-0.21.1       | 5.3 MB    | #4         |  15% \n",
-      "\n",
-      "libglib-2.68.4       | 3.3 MB    | #          |  11% \u001b[A\n",
-      "\n",
-      "\n",
-      "libiconv-1.17        | 698 KB    | ########## | 100% \u001b[A\u001b[A\n",
-      "gettext-0.21.1       | 5.3 MB    | ##5        |  26% \n",
-      "\n",
-      "libglib-2.68.4       | 3.3 MB    | ##2        |  22% \u001b[A\n",
-      "gettext-0.21.1       | 5.3 MB    | ####7      |  48% \n",
-      "\n",
-      "libglib-2.68.4       | 3.3 MB    | ####       |  40% \u001b[A\n",
-      "\n",
-      "\n",
-      "libiconv-1.17        | 698 KB    | ########## | 100% \u001b[A\u001b[A\n",
-      "\n",
-      "\n",
-      "libiconv-1.17        | 698 KB    | ########## | 100% \u001b[A\u001b[A\n",
-      "gettext-0.21.1       | 5.3 MB    | #######9   |  80% \n",
-      "\n",
-      "libglib-2.68.4       | 3.3 MB    | ######4    |  65% \u001b[A\n",
-      "\n",
-      "\n",
-      "\n",
-      "pcre-8.45            | 518 KB    | ########## | 100% \u001b[A\u001b[A\u001b[A\n",
-      "\n",
-      "libglib-2.68.4       | 3.3 MB    | ########   |  80% \u001b[A\n",
-      "\n",
-      "libglib-2.68.4       | 3.3 MB    | #########2 |  93% \u001b[A\n",
-      "gettext-0.21.1       | 5.3 MB    | #########7 |  97% \n",
-      "gettext-0.21.1       | 5.3 MB    | ########## | 100% \n",
-      "\n",
-      "libglib-2.68.4       | 3.3 MB    | ########## | 100% \u001b[A\n",
-      "\n",
-      "libglib-2.68.4       | 3.3 MB    | ########## | 100% \u001b[A\n",
-      "gettext-0.21.1       | 5.3 MB    | ########## | 100% \n",
-      "                                                     \n",
-      "\n",
-      "\n",
-      "                                                     \u001b[A\n",
-      "\n",
-      "\n",
-      "                                                     \u001b[A\u001b[A\n",
-      "\n",
-      "\n",
-      "\n",
-      "                                                     \u001b[A\u001b[A\u001b[A\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "                                                     \u001b[A\u001b[A\u001b[A\u001b[A done\n",
-      "Preparing transaction: done\n",
-      "Verifying transaction: done\n",
-      "Executing transaction: done\n",
       "\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
@@ -443,27 +120,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting cassandra-driver\n",
-      "  Downloading cassandra_driver-3.29.2-cp311-cp311-win_amd64.whl.metadata (6.3 kB)\n",
-      "Collecting geomet<0.3,>=0.1 (from cassandra-driver)\n",
-      "  Downloading geomet-0.2.1.post1-py3-none-any.whl.metadata (1.0 kB)\n",
-      "Collecting click (from geomet<0.3,>=0.1->cassandra-driver)\n",
-      "  Downloading click-8.2.1-py3-none-any.whl.metadata (2.5 kB)\n",
+      "Requirement already satisfied: cassandra-driver in c:\\users\\jvnc\\documents\\bd2\\bd2-labs\\lab15\\.conda\\lib\\site-packages (3.29.2)\n",
+      "Requirement already satisfied: geomet<0.3,>=0.1 in c:\\users\\jvnc\\documents\\bd2\\bd2-labs\\lab15\\.conda\\lib\\site-packages (from cassandra-driver) (0.2.1.post1)\n",
+      "Requirement already satisfied: click in c:\\users\\jvnc\\documents\\bd2\\bd2-labs\\lab15\\.conda\\lib\\site-packages (from geomet<0.3,>=0.1->cassandra-driver) (8.2.1)\n",
       "Requirement already satisfied: six in c:\\users\\jvnc\\documents\\bd2\\bd2-labs\\lab15\\.conda\\lib\\site-packages (from geomet<0.3,>=0.1->cassandra-driver) (1.17.0)\n",
       "Requirement already satisfied: colorama in c:\\users\\jvnc\\documents\\bd2\\bd2-labs\\lab15\\.conda\\lib\\site-packages (from click->geomet<0.3,>=0.1->cassandra-driver) (0.4.6)\n",
-      "Downloading cassandra_driver-3.29.2-cp311-cp311-win_amd64.whl (348 kB)\n",
-      "Downloading geomet-0.2.1.post1-py3-none-any.whl (18 kB)\n",
-      "Downloading click-8.2.1-py3-none-any.whl (102 kB)\n",
-      "Installing collected packages: click, geomet, cassandra-driver\n",
-      "\n",
-      "   ---------------------------------------- 0/3 [click]\n",
-      "   -------------------------- ------------- 2/3 [cassandra-driver]\n",
-      "   -------------------------- ------------- 2/3 [cassandra-driver]\n",
-      "   -------------------------- ------------- 2/3 [cassandra-driver]\n",
-      "   -------------------------- ------------- 2/3 [cassandra-driver]\n",
-      "   ---------------------------------------- 3/3 [cassandra-driver]\n",
-      "\n",
-      "Successfully installed cassandra-driver-3.29.2 click-8.2.1 geomet-0.2.1.post1\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -473,6 +134,108 @@
     "%conda install -c msys2 m2-make\n",
     "%conda install -c conda-forge pkg-config\n",
     "%pip install cassandra-driver"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "4358da03",
+   "metadata": {
+    "vscode": {
+     "languageId": "bat"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR: Could not find a version that satisfies the requirement date (from versions: none)\n",
+      "ERROR: No matching distribution found for date\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "bb5cb7f8",
+   "metadata": {
+    "vscode": {
+     "languageId": "bat"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tabla temperature_day creada correctamente.\n",
+      "100 filas insertadas correctamente en la tabla temperature_day.\n",
+      "100 filas insertadas correctamente en la tabla temperature_day.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "import uuid\n",
+    "from datetime import datetime, timedelta\n",
+    "from cassandra.cluster import Cluster\n",
+    "\n",
+    "cluster = Cluster(['localhost'])\n",
+    "session = cluster.connect('my_keyspace')\n",
+    "\n",
+    "def random_date(start, end):\n",
+    "    return start + timedelta(\n",
+    "        seconds=random.randint(0, int((end - start).total_seconds()))\n",
+    "    )\n",
+    "\n",
+    "def create() -> None:\n",
+    "    query = \"\"\"\n",
+    "    create table if not exists temperature_day (\n",
+    "        sensor_id text,\n",
+    "        date text,\n",
+    "        event_time timestamp,\n",
+    "        temperature float,\n",
+    "        primary key((sensor_id, date), event_time)\n",
+    "    )\n",
+    "    \"\"\"\n",
+    "    session.execute(query)\n",
+    "    print(\"Tabla temperature_day creada correctamente.\")\n",
+    "\n",
+    "def insert() -> None:\n",
+    "    start_date = datetime(2023, 1, 1)\n",
+    "    end_date = datetime(2024, 1, 1)\n",
+    "\n",
+    "    n = 100\n",
+    "\n",
+    "    for _ in range(n):\n",
+    "        sensor_id = str(uuid.uuid4())\n",
+    "        date = random_date(start_date, end_date).strftime('%Y-%m-%d')\n",
+    "        event_time = random_date(start_date, end_date)\n",
+    "        temperature = random.uniform(-30.0, 50.0)\n",
+    "\n",
+    "        query = \"\"\"\n",
+    "        insert into temperature_day(sensor_id, date, event_time, temperature)\n",
+    "        values (%s, %s, %s, %s)\n",
+    "        \"\"\"\n",
+    "\n",
+    "        session.execute(query, (sensor_id, date, event_time, temperature))\n",
+    "\n",
+    "    print(f\"{n} filas insertadas correctamente en la tabla temperature_day.\")\n",
+    "\n",
+    "create()\n",
+    "insert()"
    ]
   }
  ],
