--- a/Lab15/tutorial.ipynb
+++ b/Lab15/tutorial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "a5e16ecf",
    "metadata": {
     "vscode": {
@@ -125,6 +125,8 @@
       "Requirement already satisfied: click in c:\\users\\jvnc\\documents\\bd2\\bd2-labs\\lab15\\.conda\\lib\\site-packages (from geomet<0.3,>=0.1->cassandra-driver) (8.2.1)\n",
       "Requirement already satisfied: six in c:\\users\\jvnc\\documents\\bd2\\bd2-labs\\lab15\\.conda\\lib\\site-packages (from geomet<0.3,>=0.1->cassandra-driver) (1.17.0)\n",
       "Requirement already satisfied: colorama in c:\\users\\jvnc\\documents\\bd2\\bd2-labs\\lab15\\.conda\\lib\\site-packages (from click->geomet<0.3,>=0.1->cassandra-driver) (0.4.6)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Requirement already satisfied: psycopg2 in c:\\users\\jvnc\\documents\\bd2\\bd2-labs\\lab15\\.conda\\lib\\site-packages (2.9.10)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -133,59 +135,16 @@
     "%conda install -c anaconda libev\n",
     "%conda install -c msys2 m2-make\n",
     "%conda install -c conda-forge pkg-config\n",
-    "%pip install cassandra-driver"
+    "%pip install cassandra-driver\n",
+    "%pip install psycopg2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "4358da03",
-   "metadata": {
-    "vscode": {
-     "languageId": "bat"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR: Could not find a version that satisfies the requirement date (from versions: none)\n",
-      "ERROR: No matching distribution found for date\n"
-     ]
-    }
-   ],
-   "source": [
-    "%pip install date"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "bb5cb7f8",
-   "metadata": {
-    "vscode": {
-     "languageId": "bat"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tabla temperature_day creada correctamente.\n",
-      "100 filas insertadas correctamente en la tabla temperature_day.\n",
-      "100 filas insertadas correctamente en la tabla temperature_day.\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "id": "4f7da36c",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import random\n",
     "import uuid\n",
@@ -213,6 +172,11 @@
     "    session.execute(query)\n",
     "    print(\"Tabla temperature_day creada correctamente.\")\n",
     "\n",
+    "def drop() -> None:\n",
+    "    query = \"drop table if exists temperature_day\"\n",
+    "    session.execute(query)\n",
+    "    print(\"Tabla temperature_day eliminada correctamente.\")\n",
+    "\n",
     "def insert() -> None:\n",
     "    start_date = datetime(2023, 1, 1)\n",
     "    end_date = datetime(2024, 1, 1)\n",
@@ -234,6 +198,7 @@
     "\n",
     "    print(f\"{n} filas insertadas correctamente en la tabla temperature_day.\")\n",
     "\n",
+    "drop()\n",
     "create()\n",
     "insert()"
    ]
