--- a/Lab15/tutorial.ipynb
+++ b/Lab15/tutorial.ipynb
@@ -141,18 +141,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "4f7da36c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tabla temperature_day eliminada correctamente.\n",
+      "Tabla temperature_day creada correctamente.\n",
+      "10000 filas insertadas correctamente en la tabla temperature_day.\n",
+      "Tiempo de ejecución en Cassandra: 0.0138 segundos\n",
+      "Tiempo de ejecución en PostgreSQL: 0.0010 segundos\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "import uuid\n",
+    "import psycopg2\n",
+    "import time\n",
     "from datetime import datetime, timedelta\n",
     "from cassandra.cluster import Cluster\n",
     "\n",
     "cluster = Cluster(['localhost'])\n",
-    "session = cluster.connect('my_keyspace')\n",
+    "cassandra = cluster.connect('my_keyspace')\n",
+    "\n",
+    "connect = psycopg2.connect(dbname=\"lab15\", user=\"postgres\", password=\"postgres\", host=\"localhost\", port=5432)\n",
+    "connect.autocommit = True\n",
+    "postgres = connect.cursor()\n",
     "\n",
     "def random_date(start, end):\n",
     "    return start + timedelta(\n",
@@ -160,28 +178,41 @@
     "    )\n",
     "\n",
     "def create() -> None:\n",
-    "    query = \"\"\"\n",
+    "    cassandra_query = \"\"\"\n",
     "    create table if not exists temperature_day (\n",
     "        sensor_id text,\n",
     "        date text,\n",
     "        event_time timestamp,\n",
     "        temperature float,\n",
     "        primary key((sensor_id, date), event_time)\n",
+    "    ) with clustering order by (event_time asc)\n",
+    "    \"\"\"\n",
+    "    postgres_query = \"\"\"\n",
+    "    create table if not exists temperature_day (\n",
+    "        sensor_id text,\n",
+    "        date text,\n",
+    "        event_time timestamp,\n",
+    "        temperature float,\n",
+    "        primary key(sensor_id, date, event_time)\n",
     "    )\n",
     "    \"\"\"\n",
-    "    session.execute(query)\n",
+    "    cassandra.execute(cassandra_query)\n",
+    "    postgres.execute(postgres_query)\n",
     "    print(\"Tabla temperature_day creada correctamente.\")\n",
     "\n",
     "def drop() -> None:\n",
     "    query = \"drop table if exists temperature_day\"\n",
-    "    session.execute(query)\n",
+    "    cassandra.execute(query)\n",
+    "    postgres.execute(query)\n",
     "    print(\"Tabla temperature_day eliminada correctamente.\")\n",
     "\n",
-    "def insert() -> None:\n",
+    "def insert():\n",
     "    start_date = datetime(2023, 1, 1)\n",
     "    end_date = datetime(2024, 1, 1)\n",
+    "    some_id = None\n",
+    "    some_date = None\n",
     "\n",
-    "    n = 100\n",
+    "    n = 10000\n",
     "\n",
     "    for _ in range(n):\n",
     "        sensor_id = str(uuid.uuid4())\n",
@@ -189,18 +220,44 @@
     "        event_time = random_date(start_date, end_date)\n",
     "        temperature = random.uniform(-30.0, 50.0)\n",
     "\n",
+    "        if _ == n//2:\n",
+    "            some_id = sensor_id\n",
+    "            some_date = date\n",
+    "\n",
     "        query = \"\"\"\n",
     "        insert into temperature_day(sensor_id, date, event_time, temperature)\n",
     "        values (%s, %s, %s, %s)\n",
     "        \"\"\"\n",
     "\n",
-    "        session.execute(query, (sensor_id, date, event_time, temperature))\n",
+    "        cassandra.execute(query, (sensor_id, date, event_time, temperature))\n",
+    "        postgres.execute(query, (sensor_id, date, event_time, temperature))\n",
     "\n",
     "    print(f\"{n} filas insertadas correctamente en la tabla temperature_day.\")\n",
+    "    return some_id, some_date\n",
+    "\n",
+    "def test(sensor_id, date) -> None:\n",
+    "    query = \"\"\"\n",
+    "    select *\n",
+    "    from temperature_day\n",
+    "    where sensor_id = '{sensor_id}' and date = '{date}'\n",
+    "    \"\"\"\n",
+    "    start = time.time()\n",
+    "    cassandra_result = cassandra.execute(query)\n",
+    "    end = time.time()\n",
+    "    cassandra_time = end - start\n",
+    "\n",
+    "    start = time.time()\n",
+    "    postgres.execute(query)\n",
+    "    postgres_result = postgres.fetchall()\n",
+    "    end = time.time()\n",
+    "    postgres_time = end - start\n",
+    "    print(f\"Tiempo de ejecución en Cassandra: {cassandra_time:.4f} segundos\")\n",
+    "    print(f\"Tiempo de ejecución en PostgreSQL: {postgres_time:.4f} segundos\")\n",
     "\n",
     "drop()\n",
     "create()\n",
-    "insert()"
+    "some_id, some_date = insert()\n",
+    "test(some_id, some_date)"
    ]
   }
  ],
